# lib-objecttracker

./: README.md
src/aruco/: CMakeLists.txt  package.xml
src/objecttracker/: CMakeLists.txt  package.xml
src/objecttracker/include/objecttracker/: payloadbay_detector.hpp  sample_detector.hpp
src/objecttracker/src/objecttracker/: Object_Tracker.cpp  payloadbay_detector.cpp  sample_detector.cpp
